{
  "version": 4,
  "terraform_version": "1.14.1",
  "serial": 22,
  "lineage": "73fc41e3-ff42-ebce-9502-df5f7cd3a971",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02a897bbed05a3070",
            "arn": "arn:aws:ec2:us-east-1:576076729982:elastic-ip/eipalloc-02a897bbed05a3070",
            "domain": "vpc",
            "id": "eipalloc-02a897bbed05a3070",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-211-216-209.compute-1.amazonaws.com",
            "public_ip": "3.211.216.209",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Harshit-Parmar_nat_eip"
            },
            "tags_all": {
              "Name": "Harshit-Parmar_nat_eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:576076729982:internet-gateway/igw-041b7f87c082351e5",
            "id": "igw-041b7f87c082351e5",
            "owner_id": "576076729982",
            "tags": {
              "Name": "Harshit-Parmar_igw"
            },
            "tags_all": {
              "Name": "Harshit-Parmar_igw"
            },
            "vpc_id": "vpc-059d977f76e5e8f1e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:576076729982:loadbalancer/app/Harshit-Parmar-alb/1ef454165f334a0a",
            "arn_suffix": "app/Harshit-Parmar-alb/1ef454165f334a0a",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "Harshit-Parmar-alb-1075726718.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:576076729982:loadbalancer/app/Harshit-Parmar-alb/1ef454165f334a0a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Harshit-Parmar-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-030a1b6063f760e4b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00981048a2d586f0c"
              },
              {
                "subnet_id": "subnet-08879e1855ab34c78"
              }
            ],
            "subnets": [
              "subnet-00981048a2d586f0c",
              "subnet-08879e1855ab34c78"
            ],
            "tags": {
              "Name": "Harshit-Parmar_alb"
            },
            "tags_all": {
              "Name": "Harshit-Parmar_alb"
            },
            "vpc_id": "vpc-059d977f76e5e8f1e",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:576076729982:listener/app/Harshit-Parmar-alb/1ef454165f334a0a/ea278b92a5cd3d8c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:576076729982:targetgroup/Harshit-Parmar-tg/2469c4365e32bb39",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:576076729982:listener/app/Harshit-Parmar-alb/1ef454165f334a0a/ea278b92a5cd3d8c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:576076729982:loadbalancer/app/Harshit-Parmar-alb/1ef454165f334a0a",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.main",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:576076729982:targetgroup/Harshit-Parmar-tg/2469c4365e32bb39",
            "arn_suffix": "targetgroup/Harshit-Parmar-tg/2469c4365e32bb39",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:576076729982:targetgroup/Harshit-Parmar-tg/2469c4365e32bb39",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "Harshit-Parmar-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "Harshit-Parmar_target_group"
            },
            "tags_all": {
              "Name": "Harshit-Parmar_target_group"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-059d977f76e5e8f1e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02a897bbed05a3070",
            "association_id": "eipassoc-0c1008e7fb293a697",
            "connectivity_type": "public",
            "id": "nat-0ec36901920167dba",
            "network_interface_id": "eni-0eecc7ad4d7675590",
            "private_ip": "10.0.1.240",
            "public_ip": "3.211.216.209",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08879e1855ab34c78",
            "tags": {
              "Name": "Harshit-Parmar_nat_gateway"
            },
            "tags_all": {
              "Name": "Harshit-Parmar_nat_gateway"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:576076729982:route-table/rtb-0af4aa19ea23409a1",
            "id": "rtb-0af4aa19ea23409a1",
            "owner_id": "576076729982",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ec36901920167dba",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Harshit-Parmar_private_rt"
            },
            "tags_all": {
              "Name": "Harshit-Parmar_private_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-059d977f76e5e8f1e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:576076729982:route-table/rtb-08b92b6fbdf0a1c92",
            "id": "rtb-08b92b6fbdf0a1c92",
            "owner_id": "576076729982",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-041b7f87c082351e5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Harshit-Parmar_public_rt"
            },
            "tags_all": {
              "Name": "Harshit-Parmar_public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-059d977f76e5e8f1e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-008fb941b9c797e95",
            "route_table_id": "rtb-0af4aa19ea23409a1",
            "subnet_id": "subnet-0d7860686bbd77f01"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d081c3d557108faf",
            "route_table_id": "rtb-0af4aa19ea23409a1",
            "subnet_id": "subnet-03b208df0d8bfeb74"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0840460b1b3b1a481",
            "route_table_id": "rtb-08b92b6fbdf0a1c92",
            "subnet_id": "subnet-08879e1855ab34c78"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01833dc26ec084831",
            "route_table_id": "rtb-08b92b6fbdf0a1c92",
            "subnet_id": "subnet-00981048a2d586f0c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:576076729982:security-group/sg-030a1b6063f760e4b",
            "description": "Security group for Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-030a1b6063f760e4b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Harshit-Parmar_alb_sg",
            "name_prefix": "",
            "owner_id": "576076729982",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Harshit-Parmar_alb_sg"
            },
            "tags_all": {
              "Name": "Harshit-Parmar_alb_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-059d977f76e5e8f1e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:576076729982:security-group/sg-03bb8f951c1f5fcf0",
            "description": "Security group for EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03bb8f951c1f5fcf0",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-030a1b6063f760e4b"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Harshit-Parmar_ec2_sg",
            "name_prefix": "",
            "owner_id": "576076729982",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Harshit-Parmar_ec2_sg"
            },
            "tags_all": {
              "Name": "Harshit-Parmar_ec2_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-059d977f76e5e8f1e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:576076729982:subnet/subnet-0d7860686bbd77f01",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d7860686bbd77f01",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "576076729982",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Harshit-Parmar_private_subnet_1",
              "Type": "Private"
            },
            "tags_all": {
              "Name": "Harshit-Parmar_private_subnet_1",
              "Type": "Private"
            },
            "vpc_id": "vpc-059d977f76e5e8f1e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:576076729982:subnet/subnet-03b208df0d8bfeb74",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03b208df0d8bfeb74",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "576076729982",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Harshit-Parmar_private_subnet_2",
              "Type": "Private"
            },
            "tags_all": {
              "Name": "Harshit-Parmar_private_subnet_2",
              "Type": "Private"
            },
            "vpc_id": "vpc-059d977f76e5e8f1e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:576076729982:subnet/subnet-08879e1855ab34c78",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08879e1855ab34c78",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "576076729982",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Harshit-Parmar_public_subnet_1",
              "Type": "Public"
            },
            "tags_all": {
              "Name": "Harshit-Parmar_public_subnet_1",
              "Type": "Public"
            },
            "vpc_id": "vpc-059d977f76e5e8f1e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:576076729982:subnet/subnet-00981048a2d586f0c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00981048a2d586f0c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "576076729982",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Harshit-Parmar_public_subnet_2",
              "Type": "Public"
            },
            "tags_all": {
              "Name": "Harshit-Parmar_public_subnet_2",
              "Type": "Public"
            },
            "vpc_id": "vpc-059d977f76e5e8f1e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:576076729982:vpc/vpc-059d977f76e5e8f1e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01db715b623395ade",
            "default_route_table_id": "rtb-06c8750b2f77c950c",
            "default_security_group_id": "sg-051694b8ca4c4cf5a",
            "dhcp_options_id": "dopt-07ddee6c4510c2c01",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-059d977f76e5e8f1e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06c8750b2f77c950c",
            "owner_id": "576076729982",
            "tags": {
              "Name": "Harshit-Parmar_vpc"
            },
            "tags_all": {
              "Name": "Harshit-Parmar_vpc"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}